@@ -36,6 +36,7 @@ Version 1.13.1+dev:
    * Child wesnothd processes spawned by the Host Network Game option on
      Windows now display console output directly instead of using stdout.txt
      and stderr.txt.
+   * Remember last selected modifications separately for single and multiplayer.
 
 Version 1.13.1:
  * Security fixes:
